--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container clearfix p-0">
         <div class="yellow float-start ">
-            <h2>Div A</h2>
+            <h2>Div B</h2>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
         <div class="blue float-end">
-            <h2>Div B</h2>
+            <h2>Div C</h2>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
     </div>
