--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h2>Div D</h2>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
+        <div class="blue float-end">
+            <h2>Div E</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
     </div>
     <script src="/assets/js/bootstrap.min.js"></script>
 </body>
